force-app/main/default/objects/Email_Subscriber__c/Email_Subscriber__c.object-meta.xml
<CustomObject>
    <label>Email Subscriber</label>
    <nameField>
        <displayFormat>ESN-{0000}</displayFormat>
        <label>Email Subscriber Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Subscribers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>