force-app/main/default/objects/Email_Subscriber__c/fields/Contact__c.field-meta.xml
<CustomField>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Email Subscribers</relationshipLabel>
        <relationshipName>Email_Subscribers</relationshipName>
        <type>Lookup</type>
    </CustomField>