force-app/main/default/objects/Email_Subscriber__c/fields/Email_Subscription__c.field-meta.xml
<CustomField>
        <fullName>Email_Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Email Subscription</label>
        <referenceTo>Email_Subscription__c</referenceTo>
        <relationshipLabel>Email Subscribers</relationshipLabel>
        <relationshipName>Email_Subscribers</relationshipName>
        <type>Lookup</type>
    </CustomField>