force-app/main/default/objects/Email_Subscriber__c/fields/EmailSubscriberTempId__c.field-meta.xml
<CustomField>
        <fullName>EmailSubscriberTempId__c</fullName>
        <description>Temp ID used for initial lead/campaign loading mappings from Informatica</description>
        <label>EmailSubscriberTempId</label>
        <length>32</length>
        <type>Text</type>
    </CustomField>