force-app/main/default/objects/Email_Subscriber__c/fields/Lead__c.field-meta.xml
<CustomField>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Email Subscribers</relationshipLabel>
        <relationshipName>Email_Subscribers</relationshipName>
        <type>Lookup</type>
    </CustomField>