force-app/main/default/objects/Email_Subscriber__c/fields/Subscribe_Date__c.field-meta.xml
<CustomField>
        <fullName>Subscribe_Date__c</fullName>
        <label>Subscribe Date</label>
        <type>Date</type>
    </CustomField>