force-app/main/default/objects/Email_Subscriber__c/fields/Unsubscribe_Date__c.field-meta.xml
<CustomField>
        <fullName>Unsubscribe_Date__c</fullName>
        <label>Unsubscribe Date</label>
        <type>Date</type>
    </CustomField>